--- a/daemon/LogAnalyzer.cabal
+++ b/daemon/LogAnalyzer.cabal
@@ -20,7 +20,7 @@ executable LogAnalyzer
   main-is:             Main.hs
   -- other-modules:
   other-extensions:    FlexibleInstances
-  build-depends:       base >=4.8 && <4.9, array >=0.5 && <0.6, containers >=0.5 && <0.6, PSQueue == 1.1, regex-pcre-builtin
+  build-depends:       base >=4.8 && <4.9, array >=0.5 && <0.6, containers >=0.5 && <0.6, PSQueue == 1.1, regex-pcre-builtin, MissingH
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:
